--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-     <link href = "./public/fonts/styleFonts.css" rel = "stylesheet" type = "text/css" />
+    <link rel="icon" type="image/png" href="/fullLogo.png" />
+    <link
+      href="./public/fonts/styleFonts.css"
+      rel="stylesheet"
+      type="text/css"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Nutriendolavida</title>
   </head>
   <body>
     <div id="root"></div>
