--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
       rel="stylesheet"
       type="text/css"
     />
+    <link rel="preload" as="image" href="./src//home//assets/background_home.png" type="image/jpeg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nutriendolavida</title>
+    <title>Nutriendo la vida</title>
   </head>
   <body>
     <div id="root"></div>
