FEAT: mobile corrections

--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="canonical" href="https://nutriendolavida-front-20b7d4f270ae.herokuapp.com/">
+    <meta name="keywords" content="Nutricionista, Planes de nutrición, Consultas nutricionales, eBooks de nutrición, Alimentación saludable, Bienestar, Vida saludable, Nutriendo la Vida, Planes personalizados, Nutrición online, Consultoría nutricional, Salud y bienestar, Dietas saludables, Consultas online, Planes de alimentación, Hábitos saludables">
+    <meta name="description" content="Nutriendo la Vida, tu fuente para planes personalizados de nutrición, consultas nutricionales online y eBooks diseñados para mejorar tu salud y bienestar. ¡Empieza hoy a nutrir tu vida con nuestras soluciones profesionales de nutrición!">
+    <meta name="robots" content="index,follow"/>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/fullLogo.png" />
     <link
