--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="canonical" href="https://nutriendolavida-front-20b7d4f270ae.herokuapp.com/">
-    <meta name="keywords" content="Nutricionista, Planes de nutrición, Consultas nutricionales, eBooks de nutrición, Alimentación saludable, Bienestar, Vida saludable, Nutriendo la Vida, Planes personalizados, Nutrición online, Consultoría nutricional, Salud y bienestar, Dietas saludables, Consultas online, Planes de alimentación, Hábitos saludables">
-    <meta name="description" content="Nutriendo la Vida, tu fuente para planes personalizados de nutrición, consultas nutricionales online y eBooks diseñados para mejorar tu salud y bienestar. ¡Empieza hoy a nutrir tu vida con nuestras soluciones profesionales de nutrición!">
-    <meta name="robots" content="index,follow"/>
+    <link
+      rel="canonical"
+      href="https://nutriendolavida-front-20b7d4f270ae.herokuapp.com/"
+    />
+    <meta
+      name="keywords"
+      content="Nutricionista, Planes de nutrición, Consultas nutricionales, eBooks de nutrición, Alimentación saludable, Bienestar, Vida saludable, Nutriendo la Vida, Planes personalizados, Nutrición online, Consultoría nutricional, Salud y bienestar, Dietas saludables, Consultas online, Planes de alimentación, Hábitos saludables"
+    />
+    <meta
+      name="description"
+      content="Nutriendo la Vida, tu fuente para planes personalizados de nutrición, consultas nutricionales online y eBooks diseñados para mejorar tu salud y bienestar. ¡Empieza hoy a nutrir tu vida con nuestras soluciones profesionales de nutrición!"
+    />
+    <meta name="robots" content="index,follow" />
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/fullLogo.png" />
     <link
@@ -12,9 +21,20 @@
       rel="stylesheet"
       type="text/css"
     />
-    <link rel="preload" as="image" href="./src//home//assets/background_home.png" type="image/jpeg" />
+    <link
+      rel="preload"
+      as="image"
+      href="./src//home//assets/background_home.png"
+      type="image/jpeg"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nutriendo la vida</title>
+    <script>
+      if (window.location.hostname === "nutriendolavida.fit") {
+        window.location.href =
+          "https://www.nutriendolavida.fit" + window.location.pathname;
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
