FEAT: lazy loading

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
       rel="stylesheet"
       type="text/css"
     />
-    <link rel="preload" as="image" href="./src//home//assets/background_home.png" type="image/jpeg" />
+    <link rel="preload" as="image" href="./src//home/assets/background_home.png" type="image/jpeg" />
+    <link rel="preload" href="/public/fonts/P22Mackinac-Book_13.otf" as="font" type="font/otf" crossorigin="anonymous">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nutriendo la vida</title>
   </head>
