--- a/index.html
+++ b/index.html
@@ -1,6 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-X0QBFBTDF7"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-X0QBFBTDF7");
+    </script>
+
     <link rel="canonical" href="https://www.nutriendolavida.fit/" />
     <meta
       name="keywords"
@@ -19,8 +34,19 @@
       rel="stylesheet"
       type="text/css"
     />
-    <link rel="preload" as="image" href="./src//home/assets/background_home.png" type="image/jpeg" />
-    <link rel="preload" href="/public/fonts/P22Mackinac-Book_13.otf" as="font" type="font/otf" crossorigin="anonymous">
+    <link
+      rel="preload"
+      as="image"
+      href="./src//home/assets/background_home.png"
+      type="image/jpeg"
+    />
+    <link
+      rel="preload"
+      href="/public/fonts/P22Mackinac-Book_13.otf"
+      as="font"
+      type="font/otf"
+      crossorigin="anonymous"
+    />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nutriendo la vida</title>
